<resources>
    <string name="version">1.5.1</string>
    <string name="app_name">ULife優生活</string>
    <string name="title_home">美食</string>
    <string name="title_notifications">通知</string>
    <string name="title_person">個人檔案</string>
    <string name="title_chat">聊天室</string>
    <string name="toolbar_title_person_edit">編輯資料</string>
    <string name="toolbar_title_notification_main">通知</string>
    <string name="toolbar_titla_home_edit">新增文章</string>
    <string name="toolbar_title_home_card_page1">最新資訊</string>
    <string name="toolbar_title_home_main">活動</string>
    <string name="toolbar_title_chat_main">聊天室</string>
    <string name="upload_user_info_title">請填以下資訊</string>
    <string name="upload_user_info_add_image">上傳頭貼</string>
    <string name="upload_user_info_username">暱稱</string>
    <string name="upload_user_info_button">送出</string>
    <string name="login_title">登入</string>
    <string name="login_username">帳號</string>
    <string name="login_password">密碼</string>
    <string name="login_button">登入</string>
    <string name="login_create_account_button">註冊</string>
    <string name="person_page1_title">個人資料</string>
    <string name="person_page2_title">參與活動</string>
    <string name="person_page3_titke">參與提案</string>
    <string name="person_page1_company">company</string>
    <string name="person_page1_friend_count">好友</string>
    <string name="person_page1_follower_count">粉絲</string>
    <string name="person_page1_self_introduction">self introduction</string>
    <string name="person_page1_show_all_button">顯示全部</string>
    <string name="person_page1_tag">關鍵字：</string>
    <string name="person_edit_change_image">更換照片</string>
    <string name="person_edit_username">暱稱</string>
    <string name="person_edit_username_content">userName</string>
    <string name="person_edit_company">所屬單位</string>
    <string name="person_edit_company_content">company</string>
    <string name="person_edit_self_introduction">自我介紹</string>
    <string name="person_edit_self_introduction_content">content</string>
    <string name="person_edit_tag">關鍵字</string>
    <string name="person_edit_tag_content">tag</string>
    <string name="person_edit_submit_button">送出</string>
    <string name="home_edit_title">新增文章</string>
    <string name="home_edit_proposal_title">標題</string>
    <string name="home_edit_proposal_content">內文</string>
    <string name="home_edit_submit_button">送出</string>
    <string name="home_card_author">author</string>
    <string name="home_card_date">date</string>
    <string name="home_card_title">title</string>
    <string name="home_card_tag">tag</string>
    <string name="home_card_view_count">viewCount</string>
    <string name="home_card_page2_content">conctent</string>
    <string name="home_card_page1_title">活動簡章</string>
    <string name="home_card_page2_title">最新資訊</string>
    <string name="create_account_title">請輸入帳號密碼</string>
    <string name="create_account_username">帳號</string>
    <string name="create_account_password">密碼</string>
    <string name="create_account_password_vertify">再輸入一次密碼</string>
    <string name="create_account_submit_button">註冊</string>
    <string name="home_page1_card_title">message</string>
    <string name="notification_card_title">message</string>
    <string name="notification_card_date">date</string>
    <string name="chat_card_username">userName</string>
    <string name="chat_card_message">message</string>
    <string name="page_title_home_edit">新增文章</string>
    <string name="person_edit_title">修改個人資料</string>
    <string name="title_activity_maps">Map</string>

    <string name="privacy_policy_chinese">
平台使用條款草擬\n
\n
1、 當您成為 Ulife優生活 軟體（以下簡稱「本平台」）的用戶後，您已詳細閱讀及明確瞭解本『免責聲明』並同意，屬下列情況發生時本平台毋需負擔任何責任：\n
\n
2、 您使用本站服務之風險將由您個人承擔。用戶同意使用本平台各項服務系基於用戶的個人意願，並同意自負任何風險。包括因自本平台下載資料或圖片，或自本平台服務中獲得之資料導致發生任何資源流失等結果。\n
\n
3、 用戶在本平台刊登的個人廣告、商業廣告及各種商品的促銷資訊，其內容均係由該個人、廣告商或商品、服務提供人所為，因此產生的交易糾紛本平台概不負責。\n
\n
4、 用戶在本平台填寫之物件資訊、個人資料、上傳圖片等行為，純屬用戶個人行為，本平台對其內容之真實性或完整性不負任何責任。\n
\n
5、 任何由於電腦病毒侵入或發作、因政府管制而造成的暫時性關閉等影響網路正常經營之不可抗力而造成的資料毀損、丟失、被盜用或被竄改等與本平台無關。\n
\n
6、 本平台就各項服務，不負任何明示或默示之擔保責任。本平台不保證各項服務之穩定、安全、無誤、及不中斷；用戶明示承擔使用本服務之所有風險及可能發生之任何損害。\n
\n
7、 對於用戶透過本平台刊登或發布虛假、違法資訊、侵害他人權益及欺騙、敲詐行為者，純屬用戶個人行為，本平台對其個人行為而產生之一切糾紛不負任何責任\n
\n
隱私權條款\n
非常歡迎您光臨「優生活Ulife」（以下簡稱本平台），為了讓您能夠安心使用本平台的各項服務與資訊，特此向您說明本平台的隱私權保護政策，以保障您的權益，請您詳閱下列內容：\n
\n
\n
一、隱私權保護政策的適用範圍\n
\n
隱私權保護政策內容，包括本平台如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本網站以外的相關連結網站，也不適用於非本網站所委託或參與管理的人員。\n
\n
\n
二、個人資料的蒐集、處理及利用方式\n
\n
\n
當您造訪本平台或使用本平台所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本平台不會將個人資料用於其他用途。\n
本平台在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。\n
於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，決不對外公佈。\n
為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。\n
\n
\n
三、資料之保護\n
\n
\n
本平台主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。\n
如因業務需要有必要委託其他單位提供服務時，本網站亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。\n
\n
\n
四、平台對外的相關連結\n
\n
本平台提供其他網站的網路連結，您也可經由本平台所提供的連結，點選進入其他網站。但該連結網站不適用本平台的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。\n
\n
\n
五、與第三人共用個人資料之政策\n
\n
本平台絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。\n
\n
前項但書之情形包括不限於：\n
\n
\n
經由您書面同意。\n
法律明文規定。\n
為免除您生命、身體、自由或財產上之危險。\n
與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集著依其揭露方式無從識別特定之當事人。\n
當您在平台的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。\n
有利於您的權益。\n
本平台委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。\n
\n
\n
六、隱私權保護政策之修正\n
\n
本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。\n

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_food">美食</string>

</resources>
