<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeUserInfoFragment">

    <LinearLayout
        android:id="@+id/page_upload_user_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#444444"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#6dffbf"
            android:padding="30dp"
            android:text="@string/upload_user_info_title"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_photoshot_make_user_info"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"
            android:src="@mipmap/icon_boy"/>

        <Button
            android:id="@+id/button_changeIcon_make_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_user_info_add_image"
            android:textColor="#6dffbf"
            android:background="#444444"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/edit_username_make_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_user_info_username"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_submit_upload_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_user_info_button"
                android:textAllCaps="false"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>