<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="225dp">

        <ImageView
            android:id="@+id/image_food_card_home"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/text_author_card_home"
            android:text="@string/home_card_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_food_card_home"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="start"
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_title_card_home"
            android:text="@string/home_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/text_author_card_home"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_tag_card_home"
            android:text="@string/home_card_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title_card_home"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:textSize="10sp"
            android:layout_margin="5dp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
