<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.person.PersonInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/image_photoshot_information_person_section1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FFFFFF"
                    android:src="@mipmap/icon_boy"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/image_photoshot_information_person_section1"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/text_friendCount_information_person_section1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_page1_friend_count"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/text_followerCount_information_person_section1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_page1_follower_count"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:layout_weight="1"/>
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100">

                <TextView
                    android:id="@+id/text_selfIntroduction_information_person_section1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/person_page1_self_introduction"
                    android:textSize="20sp"
                    android:layout_weight="97"/>

                <TextView
                    android:id="@+id/text_tag_information_person_section1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/person_page1_tag"
                    android:textSize="20sp"
                    android:layout_weight="2"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>