<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:id="@+id/page_login"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_bird_foreground" />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/edit_username_login_page"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:hint="@string/login_username"
                android:textAlignment="center"
                android:background="@drawable/tool_box_square_text_box"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/edit_password_login_page"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:hint="@string/login_password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:background="@drawable/tool_box_square_text_box"
                />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/button_login_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/button_create_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_create_account_button"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15sp"
        android:text="系統維修中"
        android:visibility="gone"/>

</FrameLayout>